--- a/針筒01.html
+++ b/針筒01.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>針筒01</title>
+    <title>針筒</title>
     <meta name="author" content="Tina YU" />
     <style>
       *,
