--- a/熊.html
+++ b/熊.html
@@ -12,8 +12,8 @@
         box-sizing: border-box;
       }
       .bear {
-        width: 300px;
-        height: 300px;
+        width: 600px;
+        height: 600px;
         background-color: black;
         border-radius: 50%;
         position: absolute;
@@ -23,122 +23,122 @@
       }
       .ears::before {
         content: "";
+        width: 130px;
+        height: 130px;
         position: absolute;
-        top: -20px;
-        left: 26px;
+        top: -44px;
+        left: 34px;
         background-color: white;
-        width: 70px;
-        height: 70px;
-        border: 10px solid black;
+        border: 20px solid black;
         border-radius: 50%;
       }
       .ears::after {
         content: "";
+        width: 130px;
+        height: 130px;
         position: absolute;
-        top: -20px;
-        right: 26px;
+        top: -44px;
+        right: 34px;
         background-color: white;
-        width: 70px;
-        height: 70px;
-        border: 10px solid black;
+        border: 20px solid black;
         border-radius: 50%;
       }
       .eyes {
         position: absolute;
-        width: 40px;
-        height: 40px;
-        box-shadow: 80px 63px 0 black, 186px 63px 0 black;
+        width: 110px;
+        height: 110px;
+        box-shadow: 139px 126px 0 rgb(0, 0, 0), 349px 126px 0 rgb(0, 0, 0);
         border-radius: 50%;
       }
       .eyes::before {
         content: "";
-        background-color: white;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
+        width: 160px;
+        height: 160px;
         position: absolute;
-        top: 52px;
-        left: 70px;
+        background-color: white;
+        border-radius: 50%;
+        top: 100px;
+        left: 115px;
         z-index: -1;
       }
       .eyes::after {
-        position: absolute;
         content: "";
+        width: 160px;
+        height: 160px;
+        position: absolute;
         background-color: white;
-        width: 60px;
-        height: 60px;
         border-radius: 50%;
-        top: 52px;
-        left: 176px;
+        top: 100px;
+        left: 326px;
         z-index: -1;
       }
       .mouth {
         position: absolute;
-        top: 114px;
-        left: 90px;
-        width: 120px;
-        height: 80px;
+        top: 274px;
+        left: 168px;
+        width: 260px;
+        height: 169px;
         background-color: white;
         border-radius: 50%;
       }
       .mouth::before {
         content: "";
         position: absolute;
-        top: 9px;
-        left: 47px;
-        width: 30px;
-        height: 15px;
+        top: 16px;
+        left: 98px;
+        width: 64px;
+        height: 35px;
         border-radius: 50%;
         background-color: black;
       }
       .mouth::after {
         content: "";
         position: absolute;
-        top: 35px;
-        left: 20px;
-        width: 80px;
-        height: 30px;
+        top: 93px;
+        left: 54px;
+        width: 154px;
+        height: 54px;
         border-radius: 50%;
         background-color: black;
       }
       .cheek::before {
         content: "";
-        width: 70px;
-        height: 70px;
+        width: 130px;
+        height: 130px;
         background-color: red;
         border-radius: 50%;
         position: absolute;
-        top: 104px;
+        top: 214px;
         left: -20px;
       }
       .cheek::after {
         content: "";
-        width: 70px;
-        height: 70px;
+        position: absolute;
+        width: 130px;
+        height: 130px;
         background-color: red;
         border-radius: 50%;
-        position: absolute;
-        top: 104px;
+        top: 214px;
         right: -20px;
       }
-      .V::before {
+      .v-sign::before {
         content: "";
-        width: 30px;
-        height: 40px;
-        bottom: 32px;
-        left: 113px;
-        background-color: white;
         position: absolute;
+        width: 30px;
+        height: 80px;
+        bottom: 37px;
+        left: 238px;
+        background-color: white;
         transform: skewX(40deg);
       }
-      .V::after {
+      .v-sign::after {
         content: "";
-        width: 30px;
-        height: 40px;
-        bottom: 32px;
-        left: 161px;
-        background-color: white;
         position: absolute;
+        width: 30px;
+        height: 80px;
+        bottom: 37px;
+        left: 334px;
+        background-color: white;
         transform: skewX(-40deg);
       }
     </style>
@@ -149,7 +149,7 @@
       <div class="eyes"></div>
       <div class="mouth"></div>
       <div class="cheek"></div>
-      <div class="V"></div>
+      <div class="v-sign"></div>
     </div>
   </body>
 </html>
